--- a/all_solutions.tex
+++ b/all_solutions.tex
@@ -360,9 +360,6 @@ $\frac{a}{a+b}$, экспоненциально с параметром $a+b$, $
 \protect \hypertarget {soln:8.17}{}
 \begin{solution}{{8.17}}
 \end{solution}
-\protect \hypertarget {soln:8.18}{}
-\begin{solution}{{8.18}}
-\end{solution}
 \protect \hypertarget {soln:9.1}{}
 \begin{solution}{{9.1}}
 \end{solution}
@@ -371,117 +368,133 @@ $\frac{a}{a+b}$, экспоненциально с параметром $a+b$, $
 \end{solution}
 \protect \hypertarget {soln:9.3}{}
 \begin{solution}{{9.3}}
-      $\Cov(X,Y)=0$, зависимы
 \end{solution}
 \protect \hypertarget {soln:9.4}{}
 \begin{solution}{{9.4}}
-  $\Cov(X,Y)=0$, зависимы
 \end{solution}
 \protect \hypertarget {soln:9.5}{}
 \begin{solution}{{9.5}}
-  $-1/5$
-\end{solution}
-\protect \hypertarget {soln:9.6}{}
-\begin{solution}{{9.6}}
-\end{solution}
-\protect \hypertarget {soln:9.7}{}
-\begin{solution}{{9.7}}
-\end{solution}
-\protect \hypertarget {soln:9.8}{}
-\begin{solution}{{9.8}}
-$\Corr(X,Y)=1$, $\Corr(X,Z)=-1$
-\end{solution}
-\protect \hypertarget {soln:9.9}{}
-\begin{solution}{{9.9}}
-\end{solution}
-\protect \hypertarget {soln:9.10}{}
-\begin{solution}{{9.10}}
-\end{solution}
-\protect \hypertarget {soln:9.11}{}
-\begin{solution}{{9.11}}
-  нет, например, берем независимые $X$ и $Z$ и возьмём $Y=X+Z$.
-\end{solution}
-\protect \hypertarget {soln:9.12}{}
-\begin{solution}{{9.12}}
-нет
-\end{solution}
-\protect \hypertarget {soln:9.13}{}
-\begin{solution}{{9.13}}
-\end{solution}
-\protect \hypertarget {soln:9.14}{}
-\begin{solution}{{9.14}}
-\end{solution}
-\protect \hypertarget {soln:9.15}{}
-\begin{solution}{{9.15}}
-\end{solution}
-\protect \hypertarget {soln:9.16}{}
-\begin{solution}{{9.16}}
-\end{solution}
-\protect \hypertarget {soln:9.17}{}
-\begin{solution}{{9.17}}
-  \[
-  \P(X>0.5) = 1 - \P(X\leq 0.5) = 1 - P(X\leq 0.5, Y\leq +\infty) = 1 - F(0.5, +\infty)
-  \]
-  $F_X(x)=F(x, +\infty)$; $\P(X=Y+0.2)=0$ в силу непрерывности величин; $X$ и $Y$ независимы, так как $F(x,y)=F_X(x)\cdot F_Y(y)$;
-\end{solution}
-\protect \hypertarget {soln:9.18}{}
-\begin{solution}{{9.18}}
-\end{solution}
-\protect \hypertarget {soln:9.19}{}
-\begin{solution}{{9.19}}
-  Например, $X\sim U[0;1]$ и $Y=X$
-\end{solution}
-\protect \hypertarget {soln:9.20}{}
-\begin{solution}{{9.20}}
-    $\Cov(X,Y)=0$, зависимы
-\end{solution}
-\protect \hypertarget {soln:9.21}{}
-\begin{solution}{{9.21}}
-  корреляция равна $0$, зависимы, так как знание $X$ несёт информацию об $Y$, например, при $X=0$ можно утверждать, что $|Y| \in [1;2]$.
-\end{solution}
-\protect \hypertarget {soln:9.22}{}
-\begin{solution}{{9.22}}
-\end{solution}
-\protect \hypertarget {soln:9.23}{}
-\begin{solution}{{9.23}}
-\end{solution}
-\protect \hypertarget {soln:9.24}{}
-\begin{solution}{{9.24}}
-\end{solution}
-\protect \hypertarget {soln:9.25}{}
-\begin{solution}{{9.25}}
-$X$ равномерна на $[-1;1]$; пара $(X, Y)$ равномерна в круге $x^2+y^2 \leq 1$.
+  \url{https://people.xiph.org/~greg/attack_success.html}, $\approx 0.017$
 \end{solution}
 \protect \hypertarget {soln:10.1}{}
 \begin{solution}{{10.1}}
 \end{solution}
 \protect \hypertarget {soln:10.2}{}
 \begin{solution}{{10.2}}
-теорема Пифагора
 \end{solution}
 \protect \hypertarget {soln:10.3}{}
 \begin{solution}{{10.3}}
+      $\Cov(X,Y)=0$, зависимы
 \end{solution}
 \protect \hypertarget {soln:10.4}{}
 \begin{solution}{{10.4}}
-теорема Пифагора
+  $\Cov(X,Y)=0$, зависимы
 \end{solution}
 \protect \hypertarget {soln:10.5}{}
 \begin{solution}{{10.5}}
-теорема Пифагора
+  $-1/5$
+\end{solution}
+\protect \hypertarget {soln:10.6}{}
+\begin{solution}{{10.6}}
+\end{solution}
+\protect \hypertarget {soln:10.7}{}
+\begin{solution}{{10.7}}
+\end{solution}
+\protect \hypertarget {soln:10.8}{}
+\begin{solution}{{10.8}}
+$\Corr(X,Y)=1$, $\Corr(X,Z)=-1$
+\end{solution}
+\protect \hypertarget {soln:10.9}{}
+\begin{solution}{{10.9}}
+\end{solution}
+\protect \hypertarget {soln:10.10}{}
+\begin{solution}{{10.10}}
+\end{solution}
+\protect \hypertarget {soln:10.11}{}
+\begin{solution}{{10.11}}
+  нет, например, берем независимые $X$ и $Z$ и возьмём $Y=X+Z$.
+\end{solution}
+\protect \hypertarget {soln:10.12}{}
+\begin{solution}{{10.12}}
+нет
+\end{solution}
+\protect \hypertarget {soln:10.13}{}
+\begin{solution}{{10.13}}
+\end{solution}
+\protect \hypertarget {soln:10.14}{}
+\begin{solution}{{10.14}}
+\end{solution}
+\protect \hypertarget {soln:10.15}{}
+\begin{solution}{{10.15}}
+\end{solution}
+\protect \hypertarget {soln:10.16}{}
+\begin{solution}{{10.16}}
+\end{solution}
+\protect \hypertarget {soln:10.17}{}
+\begin{solution}{{10.17}}
+  \[
+  \P(X>0.5) = 1 - \P(X\leq 0.5) = 1 - P(X\leq 0.5, Y\leq +\infty) = 1 - F(0.5, +\infty)
+  \]
+  $F_X(x)=F(x, +\infty)$; $\P(X=Y+0.2)=0$ в силу непрерывности величин; $X$ и $Y$ независимы, так как $F(x,y)=F_X(x)\cdot F_Y(y)$;
+\end{solution}
+\protect \hypertarget {soln:10.18}{}
+\begin{solution}{{10.18}}
+\end{solution}
+\protect \hypertarget {soln:10.19}{}
+\begin{solution}{{10.19}}
+  Например, $X\sim U[0;1]$ и $Y=X$
+\end{solution}
+\protect \hypertarget {soln:10.20}{}
+\begin{solution}{{10.20}}
+    $\Cov(X,Y)=0$, зависимы
+\end{solution}
+\protect \hypertarget {soln:10.21}{}
+\begin{solution}{{10.21}}
+  корреляция равна $0$, зависимы, так как знание $X$ несёт информацию об $Y$, например, при $X=0$ можно утверждать, что $|Y| \in [1;2]$.
+\end{solution}
+\protect \hypertarget {soln:10.22}{}
+\begin{solution}{{10.22}}
+\end{solution}
+\protect \hypertarget {soln:10.23}{}
+\begin{solution}{{10.23}}
+\end{solution}
+\protect \hypertarget {soln:10.24}{}
+\begin{solution}{{10.24}}
+\end{solution}
+\protect \hypertarget {soln:10.25}{}
+\begin{solution}{{10.25}}
+$X$ равномерна на $[-1;1]$; пара $(X, Y)$ равномерна в круге $x^2+y^2 \leq 1$.
 \end{solution}
 \protect \hypertarget {soln:11.1}{}
 \begin{solution}{{11.1}}
 \end{solution}
 \protect \hypertarget {soln:11.2}{}
 \begin{solution}{{11.2}}
+теорема Пифагора
 \end{solution}
 \protect \hypertarget {soln:11.3}{}
 \begin{solution}{{11.3}}
-$x_{max}=\mu$, $x=\mu \pm \sigma$
 \end{solution}
 \protect \hypertarget {soln:11.4}{}
 \begin{solution}{{11.4}}
+теорема Пифагора
+\end{solution}
+\protect \hypertarget {soln:11.5}{}
+\begin{solution}{{11.5}}
+теорема Пифагора
+\end{solution}
+\protect \hypertarget {soln:12.1}{}
+\begin{solution}{{12.1}}
+\end{solution}
+\protect \hypertarget {soln:12.2}{}
+\begin{solution}{{12.2}}
+\end{solution}
+\protect \hypertarget {soln:12.3}{}
+\begin{solution}{{12.3}}
+$x_{max}=\mu$, $x=\mu \pm \sigma$
+\end{solution}
+\protect \hypertarget {soln:12.4}{}
+\begin{solution}{{12.4}}
   \[
   f_{|X|}(t) =
   \begin{cases}
@@ -490,64 +503,34 @@ $x_{max}=\mu$, $x=\mu \pm \sigma$
   \end{cases}
   \]
 \end{solution}
-\protect \hypertarget {soln:11.5}{}
-\begin{solution}{{11.5}}
+\protect \hypertarget {soln:12.5}{}
+\begin{solution}{{12.5}}
   медиана — $\exp(\mu)$
   мода — $\exp(\mu - \sigma^2)$
   $\E(Y)=\exp(\mu+\sigma^2/2)$
   $\Var(Y)=\exp(2\mu + 2\sigma^2)-\exp(2\mu + \sigma^2)$
 
 \end{solution}
-\protect \hypertarget {soln:11.6}{}
-\begin{solution}{{11.6}}
+\protect \hypertarget {soln:12.6}{}
+\begin{solution}{{12.6}}
 \end{solution}
-\protect \hypertarget {soln:11.7}{}
-\begin{solution}{{11.7}}
+\protect \hypertarget {soln:12.7}{}
+\begin{solution}{{12.7}}
   Применяем формулу интегрирования по частям.
 \end{solution}
-\protect \hypertarget {soln:12.1}{}
-\begin{solution}{{12.1}}
+\protect \hypertarget {soln:13.1}{}
+\begin{solution}{{13.1}}
   b $4/20\geq 1-100/12$
 
   c $1-e^{-3}\geq 0.75$
 \end{solution}
-\protect \hypertarget {soln:12.2}{}
-\begin{solution}{{12.2}}
-  $\Var(X)\leq 5$
-\end{solution}
-\protect \hypertarget {soln:12.3}{}
-\begin{solution}{{12.3}}
-  $\P(X<20) \geq 0.5$
-\end{solution}
-\protect \hypertarget {soln:13.1}{}
-\begin{solution}{{13.1}}
-\end{solution}
 \protect \hypertarget {soln:13.2}{}
 \begin{solution}{{13.2}}
+  $\Var(X)\leq 5$
 \end{solution}
 \protect \hypertarget {soln:13.3}{}
 \begin{solution}{{13.3}}
-\end{solution}
-\protect \hypertarget {soln:13.4}{}
-\begin{solution}{{13.4}}
-  $S_{100} \sim \cN(1000, 100)$, $\P(S_{100}>1030)=\P(Z>3)=0.0013$
-\end{solution}
-\protect \hypertarget {soln:13.5}{}
-\begin{solution}{{13.5}}
-\end{solution}
-\protect \hypertarget {soln:13.6}{}
-\begin{solution}{{13.6}}
-\end{solution}
-\protect \hypertarget {soln:13.7}{}
-\begin{solution}{{13.7}}
-\end{solution}
-\protect \hypertarget {soln:13.8}{}
-\begin{solution}{{13.8}}
-  $4(\sqrt{2}-1)/3$, 20 problems
-\end{solution}
-\protect \hypertarget {soln:13.9}{}
-\begin{solution}{{13.9}}
-  $2/\pi$, 20 problems
+  $\P(X<20) \geq 0.5$
 \end{solution}
 \protect \hypertarget {soln:14.1}{}
 \begin{solution}{{14.1}}
@@ -560,6 +543,7 @@ $x_{max}=\mu$, $x=\mu \pm \sigma$
 \end{solution}
 \protect \hypertarget {soln:14.4}{}
 \begin{solution}{{14.4}}
+  $S_{100} \sim \cN(1000, 100)$, $\P(S_{100}>1030)=\P(Z>3)=0.0013$
 \end{solution}
 \protect \hypertarget {soln:14.5}{}
 \begin{solution}{{14.5}}
@@ -572,37 +556,14 @@ $x_{max}=\mu$, $x=\mu \pm \sigma$
 \end{solution}
 \protect \hypertarget {soln:14.8}{}
 \begin{solution}{{14.8}}
+  $4(\sqrt{2}-1)/3$, 20 problems
 \end{solution}
 \protect \hypertarget {soln:14.9}{}
 \begin{solution}{{14.9}}
-\end{solution}
-\protect \hypertarget {soln:14.10}{}
-\begin{solution}{{14.10}}
-\end{solution}
-\protect \hypertarget {soln:14.11}{}
-\begin{solution}{{14.11}}
-\end{solution}
-\protect \hypertarget {soln:14.12}{}
-\begin{solution}{{14.12}}
-\end{solution}
-\protect \hypertarget {soln:14.13}{}
-\begin{solution}{{14.13}}
-\end{solution}
-\protect \hypertarget {soln:14.14}{}
-\begin{solution}{{14.14}}
-\end{solution}
-\protect \hypertarget {soln:14.15}{}
-\begin{solution}{{14.15}}
-\end{solution}
-\protect \hypertarget {soln:14.16}{}
-\begin{solution}{{14.16}}
-\end{solution}
-\protect \hypertarget {soln:14.17}{}
-\begin{solution}{{14.17}}
+  $2/\pi$, 20 problems
 \end{solution}
 \protect \hypertarget {soln:15.1}{}
 \begin{solution}{{15.1}}
-  \autocite{mukherjee2017proof}
 \end{solution}
 \protect \hypertarget {soln:15.2}{}
 \begin{solution}{{15.2}}
@@ -612,17 +573,12 @@ $x_{max}=\mu$, $x=\mu \pm \sigma$
 \end{solution}
 \protect \hypertarget {soln:15.4}{}
 \begin{solution}{{15.4}}
-  $K=170$, $M=120$ (симметричный интервал) или $K=M=168$ (площадь с одного края можно принять за 0) \\
-  Вариант: театр, два входа, два гардероба а) только пары, б) по одному
 \end{solution}
 \protect \hypertarget {soln:15.5}{}
 \begin{solution}{{15.5}}
 \end{solution}
 \protect \hypertarget {soln:15.6}{}
 \begin{solution}{{15.6}}
-  $\Corr(Y_1, Y_2) = 2/5$, $E(Y_t | Y_{t-1}) = 0.4 Y_{t-1}$
-  В среднем Машка не становиться ни грустней, ни улыбчивей
-  Представить $\E(Y_t | Y_{t-1}, Y_{t-2})$ в виде $\E(Y_t | Y_{t-1}, Y_{t-2}) = a_1 Y_{t-1} + a_2 Y_{t-2} + Z$
 \end{solution}
 \protect \hypertarget {soln:15.7}{}
 \begin{solution}{{15.7}}
@@ -638,91 +594,148 @@ $x_{max}=\mu$, $x=\mu \pm \sigma$
 \end{solution}
 \protect \hypertarget {soln:15.11}{}
 \begin{solution}{{15.11}}
-  $Y \sim N(0;1)$, нет, они нормальны только по отдельности, но не в совокупности, $\Corr(X,Y)=0$. Взять $Y=XZ$, где $Z$ принимает значение $1$ с вероятностью $p=3/4$ и $-1$ с вероятностью $1-p=1/4$
+\end{solution}
+\protect \hypertarget {soln:15.12}{}
+\begin{solution}{{15.12}}
+\end{solution}
+\protect \hypertarget {soln:15.13}{}
+\begin{solution}{{15.13}}
+\end{solution}
+\protect \hypertarget {soln:15.14}{}
+\begin{solution}{{15.14}}
+\end{solution}
+\protect \hypertarget {soln:15.15}{}
+\begin{solution}{{15.15}}
+\end{solution}
+\protect \hypertarget {soln:15.16}{}
+\begin{solution}{{15.16}}
+\end{solution}
+\protect \hypertarget {soln:15.17}{}
+\begin{solution}{{15.17}}
 \end{solution}
 \protect \hypertarget {soln:16.1}{}
 \begin{solution}{{16.1}}
+  \autocite{mukherjee2017proof}
 \end{solution}
 \protect \hypertarget {soln:16.2}{}
 \begin{solution}{{16.2}}
 \end{solution}
 \protect \hypertarget {soln:16.3}{}
 \begin{solution}{{16.3}}
-Являются: $X_{t}=-W_{t}$, $X_{t}=W_{a+t}-W_{a}$, $X_{t}=\frac{1}{a}W_{a^{2}t}$
 \end{solution}
 \protect \hypertarget {soln:16.4}{}
 \begin{solution}{{16.4}}
+  $K=170$, $M=120$ (симметричный интервал) или $K=M=168$ (площадь с одного края можно принять за 0) \\
+  Вариант: театр, два входа, два гардероба а) только пары, б) по одному
 \end{solution}
 \protect \hypertarget {soln:16.5}{}
 \begin{solution}{{16.5}}
 \end{solution}
+\protect \hypertarget {soln:16.6}{}
+\begin{solution}{{16.6}}
+  $\Corr(Y_1, Y_2) = 2/5$, $E(Y_t | Y_{t-1}) = 0.4 Y_{t-1}$
+  В среднем Машка не становиться ни грустней, ни улыбчивей
+  Представить $\E(Y_t | Y_{t-1}, Y_{t-2})$ в виде $\E(Y_t | Y_{t-1}, Y_{t-2}) = a_1 Y_{t-1} + a_2 Y_{t-2} + Z$
+\end{solution}
+\protect \hypertarget {soln:16.7}{}
+\begin{solution}{{16.7}}
+\end{solution}
+\protect \hypertarget {soln:16.8}{}
+\begin{solution}{{16.8}}
+\end{solution}
+\protect \hypertarget {soln:16.9}{}
+\begin{solution}{{16.9}}
+\end{solution}
+\protect \hypertarget {soln:16.10}{}
+\begin{solution}{{16.10}}
+\end{solution}
+\protect \hypertarget {soln:16.11}{}
+\begin{solution}{{16.11}}
+  $Y \sim N(0;1)$, нет, они нормальны только по отдельности, но не в совокупности, $\Corr(X,Y)=0$. Взять $Y=XZ$, где $Z$ принимает значение $1$ с вероятностью $p=3/4$ и $-1$ с вероятностью $1-p=1/4$
+\end{solution}
 \protect \hypertarget {soln:17.1}{}
 \begin{solution}{{17.1}}
-Среднее равно $(x+25)/5$. Если $x<5$, получаем $x=0$. Если $x \in (5; 7)$, получаем $x=25/4$. Если $x>7$, получаем $x=10$.
 \end{solution}
 \protect \hypertarget {soln:17.2}{}
 \begin{solution}{{17.2}}
-Медиана не изменится, среднее упадёт на $10/25=0.4$. Для случая роста $153$: среднее упадёт на $0.8$, медиана упадёт произвольно на некое число из отрезка $[0;2]$.
 \end{solution}
 \protect \hypertarget {soln:17.3}{}
 \begin{solution}{{17.3}}
-  да
+Являются: $X_{t}=-W_{t}$, $X_{t}=W_{a+t}-W_{a}$, $X_{t}=\frac{1}{a}W_{a^{2}t}$
 \end{solution}
 \protect \hypertarget {soln:17.4}{}
 \begin{solution}{{17.4}}
-да
 \end{solution}
 \protect \hypertarget {soln:17.5}{}
 \begin{solution}{{17.5}}
 \end{solution}
-\protect \hypertarget {soln:17.6}{}
-\begin{solution}{{17.6}}
-  два независимых симметричных распределения; практически любая сумма несимметричных распределений, например, два независимых с $p(x)=2-2x$ на $[0;1]$; неотрицательные случайные величины; симметричные около нуля случайные величины
-\end{solution}
-\protect \hypertarget {soln:17.7}{}
-\begin{solution}{{17.7}}
-  Исключим те варианты, когда все пять наблюдений оказались или синхронно выше, или синхронно ниже медианы, получаем, $p=1-2\cdot 0.5^5=1-0.5^4$.
-\end{solution}
-\protect \hypertarget {soln:17.8}{}
-\begin{solution}{{17.8}}
-  укреплять те места, где не было следов пуль
-\end{solution}
-\protect \hypertarget {soln:17.9}{}
-\begin{solution}{{17.9}}
-\end{solution}
-\protect \hypertarget {soln:17.10}{}
-\begin{solution}{{17.10}}
-\end{solution}
-\protect \hypertarget {soln:17.11}{}
-\begin{solution}{{17.11}}
-\end{solution}
-\protect \hypertarget {soln:17.12}{}
-\begin{solution}{{17.12}}
-\end{solution}
-\protect \hypertarget {soln:17.13}{}
-\begin{solution}{{17.13}}
-\end{solution}
-\protect \hypertarget {soln:17.14}{}
-\begin{solution}{{17.14}}
-  $m^2=1/2$, $\Med(X) = 1/\sqrt{2}$.
-\end{solution}
 \protect \hypertarget {soln:18.1}{}
 \begin{solution}{{18.1}}
+Среднее равно $(x+25)/5$. Если $x<5$, получаем $x=0$. Если $x \in (5; 7)$, получаем $x=25/4$. Если $x>7$, получаем $x=10$.
 \end{solution}
 \protect \hypertarget {soln:18.2}{}
 \begin{solution}{{18.2}}
+Медиана не изменится, среднее упадёт на $10/25=0.4$. Для случая роста $153$: среднее упадёт на $0.8$, медиана упадёт произвольно на некое число из отрезка $[0;2]$.
 \end{solution}
 \protect \hypertarget {soln:18.3}{}
 \begin{solution}{{18.3}}
+  да
 \end{solution}
 \protect \hypertarget {soln:18.4}{}
 \begin{solution}{{18.4}}
+да
 \end{solution}
 \protect \hypertarget {soln:18.5}{}
 \begin{solution}{{18.5}}
 \end{solution}
+\protect \hypertarget {soln:18.6}{}
+\begin{solution}{{18.6}}
+  два независимых симметричных распределения; практически любая сумма несимметричных распределений, например, два независимых с $p(x)=2-2x$ на $[0;1]$; неотрицательные случайные величины; симметричные около нуля случайные величины
+\end{solution}
+\protect \hypertarget {soln:18.7}{}
+\begin{solution}{{18.7}}
+  Исключим те варианты, когда все пять наблюдений оказались или синхронно выше, или синхронно ниже медианы, получаем, $p=1-2\cdot 0.5^5=1-0.5^4$.
+\end{solution}
+\protect \hypertarget {soln:18.8}{}
+\begin{solution}{{18.8}}
+  укреплять те места, где не было следов пуль
+\end{solution}
+\protect \hypertarget {soln:18.9}{}
+\begin{solution}{{18.9}}
+\end{solution}
+\protect \hypertarget {soln:18.10}{}
+\begin{solution}{{18.10}}
+\end{solution}
+\protect \hypertarget {soln:18.11}{}
+\begin{solution}{{18.11}}
+\end{solution}
+\protect \hypertarget {soln:18.12}{}
+\begin{solution}{{18.12}}
+\end{solution}
+\protect \hypertarget {soln:18.13}{}
+\begin{solution}{{18.13}}
+\end{solution}
+\protect \hypertarget {soln:18.14}{}
+\begin{solution}{{18.14}}
+  $m^2=1/2$, $\Med(X) = 1/\sqrt{2}$.
+\end{solution}
 \protect \hypertarget {soln:19.1}{}
 \begin{solution}{{19.1}}
+\end{solution}
+\protect \hypertarget {soln:19.2}{}
+\begin{solution}{{19.2}}
+\end{solution}
+\protect \hypertarget {soln:19.3}{}
+\begin{solution}{{19.3}}
+\end{solution}
+\protect \hypertarget {soln:19.4}{}
+\begin{solution}{{19.4}}
+\end{solution}
+\protect \hypertarget {soln:19.5}{}
+\begin{solution}{{19.5}}
+\end{solution}
+\protect \hypertarget {soln:20.1}{}
+\begin{solution}{{20.1}}
   Метод максимального правдоподобия:
   \[
     C_n^{Y_{\text{к}}}C_{n-Y_{\text{к}}}^{Y_{\text{щ}}}a^{Y_{\text{к}}}(2a)^{Y_{\text{щ}}}(1-3a)^{Y_{\text{б}}} \to \max_a
@@ -737,8 +750,8 @@ $x_{max}=\mu$, $x=\mu \pm \sigma$
 С точки зрения Пса Шарика, неизвестными являются две вероятности, $a$ и $b$. Он решает задачу максимизации по двум переменным. В результате получается вполне себе интуитивная оценка $\hat a_{\text{ПШ}} = Y_{\text{к}}/n$.
 
 \end{solution}
-\protect \hypertarget {soln:19.2}{}
-\begin{solution}{{19.2}}
+\protect \hypertarget {soln:20.2}{}
+\begin{solution}{{20.2}}
 Метод правдоподобия: $\max_n \P(S=80)$. Замечаем, что $S \sim Bin\left(100, p=\frac{100}{n}\right)$. Отсюда, $\hat n_{ML} = 125$.
 
 Метод моментов. Рассмотрим $Y_1$, $Y_2$, \ldots, $Y_n$. Величина $Y_i$ равна 1 если при втором отлове $i$-ый заяц оказался с бантом и 0 иначе.
@@ -752,24 +765,6 @@ $x_{max}=\mu$, $x=\mu \pm \sigma$
 \hat n_{MM} = \frac{100}{\bar Y} = \frac{100^2}{S}
 \]
 \end{solution}
-\protect \hypertarget {soln:19.3}{}
-\begin{solution}{{19.3}}
-\end{solution}
-\protect \hypertarget {soln:19.4}{}
-\begin{solution}{{19.4}}
-\end{solution}
-\protect \hypertarget {soln:19.5}{}
-\begin{solution}{{19.5}}
-\end{solution}
-\protect \hypertarget {soln:20.1}{}
-\begin{solution}{{20.1}}
-  $\hat{\theta}_{ML}=0.25$, $\hat{\theta}_{MM}=0.2$
-  $\hat{\theta}_{MM}=\frac{2{,}4-\bar{X}}{7}$
-\end{solution}
-\protect \hypertarget {soln:20.2}{}
-\begin{solution}{{20.2}}
-$\hat{a}=\ln(Y_{1})$, $\hat{b}=\ln(Y_{2})-\ln(Y_{1})$
-\end{solution}
 \protect \hypertarget {soln:20.3}{}
 \begin{solution}{{20.3}}
 \end{solution}
@@ -779,68 +774,86 @@ $\hat{a}=\ln(Y_{1})$, $\hat{b}=\ln(Y_{2})-\ln(Y_{1})$
 \protect \hypertarget {soln:20.5}{}
 \begin{solution}{{20.5}}
 \end{solution}
-\protect \hypertarget {soln:20.6}{}
-\begin{solution}{{20.6}}
-$\hat{a}_{ml}=\sum X_i^2/2n$, $\hat{a}_{mm}=\bar{X}$.
-\end{solution}
-\protect \hypertarget {soln:20.7}{}
-\begin{solution}{{20.7}}
-\end{solution}
-\protect \hypertarget {soln:20.8}{}
-\begin{solution}{{20.8}}
-\end{solution}
-\protect \hypertarget {soln:20.9}{}
-\begin{solution}{{20.9}}
-\end{solution}
-\protect \hypertarget {soln:20.10}{}
-\begin{solution}{{20.10}}
-\end{solution}
-\protect \hypertarget {soln:20.11}{}
-\begin{solution}{{20.11}}
-\end{solution}
-\protect \hypertarget {soln:20.12}{}
-\begin{solution}{{20.12}}
-\end{solution}
-\protect \hypertarget {soln:20.13}{}
-\begin{solution}{{20.13}}
-\end{solution}
-\protect \hypertarget {soln:20.14}{}
-\begin{solution}{{20.14}}
-\end{solution}
-\protect \hypertarget {soln:20.15}{}
-\begin{solution}{{20.15}}
-\end{solution}
-\protect \hypertarget {soln:20.16}{}
-\begin{solution}{{20.16}}
-\end{solution}
-\protect \hypertarget {soln:20.17}{}
-\begin{solution}{{20.17}}
-\end{solution}
-\protect \hypertarget {soln:20.18}{}
-\begin{solution}{{20.18}}
-\end{solution}
-\protect \hypertarget {soln:20.19}{}
-\begin{solution}{{20.19}}
-\end{solution}
-\protect \hypertarget {soln:20.20}{}
-\begin{solution}{{20.20}}
-\end{solution}
-\protect \hypertarget {soln:20.21}{}
-\begin{solution}{{20.21}}
-\end{solution}
-\protect \hypertarget {soln:20.22}{}
-\begin{solution}{{20.22}}
-\end{solution}
-\protect \hypertarget {soln:20.23}{}
-\begin{solution}{{20.23}}
-  $\plim_{n\to\infty} \hat\alpha_{ML}(n) = 0$, не является состоятельной
-\end{solution}
-\protect \hypertarget {soln:20.24}{}
-\begin{solution}{{20.24}}
-
-\end{solution}
 \protect \hypertarget {soln:21.1}{}
 \begin{solution}{{21.1}}
+  $\hat{\theta}_{ML}=0.25$, $\hat{\theta}_{MM}=0.2$
+  $\hat{\theta}_{MM}=\frac{2{,}4-\bar{X}}{7}$
+\end{solution}
+\protect \hypertarget {soln:21.2}{}
+\begin{solution}{{21.2}}
+$\hat{a}=\ln(Y_{1})$, $\hat{b}=\ln(Y_{2})-\ln(Y_{1})$
+\end{solution}
+\protect \hypertarget {soln:21.3}{}
+\begin{solution}{{21.3}}
+\end{solution}
+\protect \hypertarget {soln:21.4}{}
+\begin{solution}{{21.4}}
+\end{solution}
+\protect \hypertarget {soln:21.5}{}
+\begin{solution}{{21.5}}
+\end{solution}
+\protect \hypertarget {soln:21.6}{}
+\begin{solution}{{21.6}}
+$\hat{a}_{ml}=\sum X_i^2/2n$, $\hat{a}_{mm}=\bar{X}$.
+\end{solution}
+\protect \hypertarget {soln:21.7}{}
+\begin{solution}{{21.7}}
+\end{solution}
+\protect \hypertarget {soln:21.8}{}
+\begin{solution}{{21.8}}
+\end{solution}
+\protect \hypertarget {soln:21.9}{}
+\begin{solution}{{21.9}}
+\end{solution}
+\protect \hypertarget {soln:21.10}{}
+\begin{solution}{{21.10}}
+\end{solution}
+\protect \hypertarget {soln:21.11}{}
+\begin{solution}{{21.11}}
+\end{solution}
+\protect \hypertarget {soln:21.12}{}
+\begin{solution}{{21.12}}
+\end{solution}
+\protect \hypertarget {soln:21.13}{}
+\begin{solution}{{21.13}}
+\end{solution}
+\protect \hypertarget {soln:21.14}{}
+\begin{solution}{{21.14}}
+\end{solution}
+\protect \hypertarget {soln:21.15}{}
+\begin{solution}{{21.15}}
+\end{solution}
+\protect \hypertarget {soln:21.16}{}
+\begin{solution}{{21.16}}
+\end{solution}
+\protect \hypertarget {soln:21.17}{}
+\begin{solution}{{21.17}}
+\end{solution}
+\protect \hypertarget {soln:21.18}{}
+\begin{solution}{{21.18}}
+\end{solution}
+\protect \hypertarget {soln:21.19}{}
+\begin{solution}{{21.19}}
+\end{solution}
+\protect \hypertarget {soln:21.20}{}
+\begin{solution}{{21.20}}
+\end{solution}
+\protect \hypertarget {soln:21.21}{}
+\begin{solution}{{21.21}}
+\end{solution}
+\protect \hypertarget {soln:21.22}{}
+\begin{solution}{{21.22}}
+\end{solution}
+\protect \hypertarget {soln:21.23}{}
+\begin{solution}{{21.23}}
+  $\plim_{n\to\infty} \hat\alpha_{ML}(n) = 0$, не является состоятельной
+\end{solution}
+\protect \hypertarget {soln:21.24}{}
+\begin{solution}{{21.24}}
+
+\end{solution}
+\protect \hypertarget {soln:22.1}{}
+\begin{solution}{{22.1}}
     \begin{enumerate}
       \item $c=1/n$, да
       \item $c=1/(n+\sigma^2/\mu^2)$, нет, так как $\mu$ и $\sigma$ неизвестны
@@ -848,8 +861,8 @@ $\hat{a}_{ml}=\sum X_i^2/2n$, $\hat{a}_{mm}=\bar{X}$.
     \end{enumerate}
   
 \end{solution}
-\protect \hypertarget {soln:21.2}{}
-\begin{solution}{{21.2}}
+\protect \hypertarget {soln:22.2}{}
+\begin{solution}{{22.2}}
     \begin{enumerate}
     \item несмещённая, состоятельная, линейная, неэффективная
     \item несмещённая, состоятельная, линейная, неэффективная
@@ -864,8 +877,8 @@ $\hat{a}_{ml}=\sum X_i^2/2n$, $\hat{a}_{mm}=\bar{X}$.
     \end{enumerate}
   
 \end{solution}
-\protect \hypertarget {soln:21.3}{}
-\begin{solution}{{21.3}}
+\protect \hypertarget {soln:22.3}{}
+\begin{solution}{{22.3}}
 \begin{enumerate}
 \item $\hat\theta_{ML} = \max\{ Y_1, Y_2, \ldots, Y_n\}$.
 \item Все $Y_i$ меньше $\theta$, значит и $\hat\theta$ всегда меньше $\theta$, значит смещённая.
@@ -874,163 +887,139 @@ $\hat{a}_{ml}=\sum X_i^2/2n$, $\hat{a}_{mm}=\bar{X}$.
 \item $\hat\theta_{unbiased} = \frac{5n+1}{5n}\hat\theta$.
 \end{enumerate}
 \end{solution}
-\protect \hypertarget {soln:21.4}{}
-\begin{solution}{{21.4}}
+\protect \hypertarget {soln:22.4}{}
+\begin{solution}{{22.4}}
 \begin{enumerate}
   \item $\hat p$ несмещённая
   \item $\sigma^2 = n p(1-p)$.
   \item $\E(\hat\sigma^2) = (n-1)p(1-p)$, смещённая, $\hat\sigma^2_{unbiased} = \frac{n}{n-1} \hat\sigma^2$.
 \end{enumerate}
 \end{solution}
-\protect \hypertarget {soln:21.5}{}
-\begin{solution}{{21.5}}
-
-\end{solution}
-\protect \hypertarget {soln:21.6}{}
-\begin{solution}{{21.6}}
-
-\end{solution}
-\protect \hypertarget {soln:21.7}{}
-\begin{solution}{{21.7}}
-
-\end{solution}
-\protect \hypertarget {soln:21.8}{}
-\begin{solution}{{21.8}}
-
-\end{solution}
-\protect \hypertarget {soln:21.9}{}
-\begin{solution}{{21.9}}
-
-\end{solution}
-\protect \hypertarget {soln:21.10}{}
-\begin{solution}{{21.10}}
-
-\end{solution}
-\protect \hypertarget {soln:21.11}{}
-\begin{solution}{{21.11}}
-
-\end{solution}
-\protect \hypertarget {soln:21.12}{}
-\begin{solution}{{21.12}}
-  Закон распределения $X$ также экспоненциальный, но с другим $\lambda$. Честно находим $\E(X)=\theta/20$, отсюда
-  $\hat\theta_{unbiased} = 20X$.
-\end{solution}
-\protect \hypertarget {soln:21.13}{}
-\begin{solution}{{21.13}}
-
-\end{solution}
-\protect \hypertarget {soln:21.14}{}
-\begin{solution}{{21.14}}
-
-\end{solution}
-\protect \hypertarget {soln:21.15}{}
-\begin{solution}{{21.15}}
-
-\end{solution}
-\protect \hypertarget {soln:22.1}{}
-\begin{solution}{{22.1}}
-  $\frac{1}{1.8} - \frac{1}{2.2}$, $[0;10X]$.
-\end{solution}
-\protect \hypertarget {soln:22.2}{}
-\begin{solution}{{22.2}}
-\end{solution}
-\protect \hypertarget {soln:22.3}{}
-\begin{solution}{{22.3}}
-\end{solution}
-\protect \hypertarget {soln:22.4}{}
-\begin{solution}{{22.4}}
-\end{solution}
 \protect \hypertarget {soln:22.5}{}
 \begin{solution}{{22.5}}
+
 \end{solution}
 \protect \hypertarget {soln:22.6}{}
 \begin{solution}{{22.6}}
-Важна при обоих доверительных интервалах. Без предпосылки о нормальности интервал для дисперсии по данным формулам нельзя построить даже при больших $n$. При больших $n$ можно отказаться от предпосылки о нормальности при построении интервала для $\mu$.
+
 \end{solution}
 \protect \hypertarget {soln:22.7}{}
 \begin{solution}{{22.7}}
+
+\end{solution}
+\protect \hypertarget {soln:22.8}{}
+\begin{solution}{{22.8}}
+
+\end{solution}
+\protect \hypertarget {soln:22.9}{}
+\begin{solution}{{22.9}}
+
+\end{solution}
+\protect \hypertarget {soln:22.10}{}
+\begin{solution}{{22.10}}
+
+\end{solution}
+\protect \hypertarget {soln:22.11}{}
+\begin{solution}{{22.11}}
+
+\end{solution}
+\protect \hypertarget {soln:22.12}{}
+\begin{solution}{{22.12}}
+  Закон распределения $X$ также экспоненциальный, но с другим $\lambda$. Честно находим $\E(X)=\theta/20$, отсюда
+  $\hat\theta_{unbiased} = 20X$.
+\end{solution}
+\protect \hypertarget {soln:22.13}{}
+\begin{solution}{{22.13}}
+
+\end{solution}
+\protect \hypertarget {soln:22.14}{}
+\begin{solution}{{22.14}}
+
+\end{solution}
+\protect \hypertarget {soln:22.15}{}
+\begin{solution}{{22.15}}
+
 \end{solution}
 \protect \hypertarget {soln:23.1}{}
 \begin{solution}{{23.1}}
-к 1/2
+  $\frac{1}{1.8} - \frac{1}{2.2}$, $[0;10X]$.
 \end{solution}
 \protect \hypertarget {soln:23.2}{}
 \begin{solution}{{23.2}}
-  равномерно, $\alpha=0.05$; нет, он резко увеличивает ошибку второго рода
 \end{solution}
 \protect \hypertarget {soln:23.3}{}
 \begin{solution}{{23.3}}
-  $\alpha = 1/8$, $\beta = 9/32$
 \end{solution}
 \protect \hypertarget {soln:23.4}{}
 \begin{solution}{{23.4}}
-  $\alpha = \P(\cN(0;1) > -0.35) \approx 0.64$, $\beta = \P(\cN(0;1) \leq -1.76) \approx 0.04$.
 \end{solution}
 \protect \hypertarget {soln:23.5}{}
 \begin{solution}{{23.5}}
 \end{solution}
 \protect \hypertarget {soln:23.6}{}
 \begin{solution}{{23.6}}
+Важна при обоих доверительных интервалах. Без предпосылки о нормальности интервал для дисперсии по данным формулам нельзя построить даже при больших $n$. При больших $n$ можно отказаться от предпосылки о нормальности при построении интервала для $\mu$.
 \end{solution}
 \protect \hypertarget {soln:23.7}{}
 \begin{solution}{{23.7}}
+\end{solution}
+\protect \hypertarget {soln:24.1}{}
+\begin{solution}{{24.1}}
+к 1/2
+\end{solution}
+\protect \hypertarget {soln:24.2}{}
+\begin{solution}{{24.2}}
+  равномерно, $\alpha=0.05$; нет, он резко увеличивает ошибку второго рода
+\end{solution}
+\protect \hypertarget {soln:24.3}{}
+\begin{solution}{{24.3}}
+  $\alpha = 1/8$, $\beta = 9/32$
+\end{solution}
+\protect \hypertarget {soln:24.4}{}
+\begin{solution}{{24.4}}
+  $\alpha = \P(\cN(0;1) > -0.35) \approx 0.64$, $\beta = \P(\cN(0;1) \leq -1.76) \approx 0.04$.
+\end{solution}
+\protect \hypertarget {soln:24.5}{}
+\begin{solution}{{24.5}}
+\end{solution}
+\protect \hypertarget {soln:24.6}{}
+\begin{solution}{{24.6}}
+\end{solution}
+\protect \hypertarget {soln:24.7}{}
+\begin{solution}{{24.7}}
 
 \end{solution}
-\protect \hypertarget {soln:23.8}{}
-\begin{solution}{{23.8}}
+\protect \hypertarget {soln:24.8}{}
+\begin{solution}{{24.8}}
 Критерий Неймана-Пирсона сводится к сравнению $\bar X$ с порогом. При верной $H_0$ величина $\bar X$ распределена $\cN(0; \frac{4}{n})$.
 Отсюда искомый критерий имеет вид:
 Если $\bar X  \geqslant 0.825$, то гипотеза ${H_0}$ отвергается в пользу гипотезы ${H_a}$.
 \end{solution}
-\protect \hypertarget {soln:23.9}{}
-\begin{solution}{{23.9}}
+\protect \hypertarget {soln:24.9}{}
+\begin{solution}{{24.9}}
   Упрощая неравенство из леммы Неймана-Пирсона, получаем критерий: если $X_1\cdot X_2 >t$, то $H_0$ отвергается. Величину $t$ находим из уравнения
 \[
 \int_0^t (1 - t/x) \, dx = 0.05
 \]
 \end{solution}
-\protect \hypertarget {soln:23.10}{}
-\begin{solution}{{23.10}}
+\protect \hypertarget {soln:24.10}{}
+\begin{solution}{{24.10}}
 
 \end{solution}
-\protect \hypertarget {soln:23.11}{}
-\begin{solution}{{23.11}}
+\protect \hypertarget {soln:24.11}{}
+\begin{solution}{{24.11}}
 \end{solution}
-\protect \hypertarget {soln:24.1}{}
-\begin{solution}{{24.1}}
+\protect \hypertarget {soln:25.1}{}
+\begin{solution}{{25.1}}
 При $p_N$ заданном в $H_0$ критерий Пирсона имеет хи-квадрат распределение с двумя степенями свободы.
 При оцениваемом $p_N$ критерий Пирсона имеет хи-квадрат распределение с одной степенью свободы.
 
 \url{https://ru.wikipedia.org/wiki/Закон_Харди_—_Вайнберга}
   
 \end{solution}
-\protect \hypertarget {soln:25.1}{}
-\begin{solution}{{25.1}}
-$\E(Ay)=A\E(y)$, $\Var(Ay)=A\Var(y)A^T$
-\end{solution}
-\protect \hypertarget {soln:25.2}{}
-\begin{solution}{{25.2}}
-
-\end{solution}
-\protect \hypertarget {soln:25.3}{}
-\begin{solution}{{25.3}}
-
-\end{solution}
-\protect \hypertarget {soln:25.4}{}
-\begin{solution}{{25.4}}
-
-\end{solution}
-\protect \hypertarget {soln:25.5}{}
-\begin{solution}{{25.5}}
-
-\end{solution}
-\protect \hypertarget {soln:25.6}{}
-\begin{solution}{{25.6}}
-
-\end{solution}
 \protect \hypertarget {soln:26.1}{}
 \begin{solution}{{26.1}}
-Вычтем $2x^2 + 2y^2 + 2z^2 + 2w^2$. Получим, что оптимальное $x=0$. Далее, $z=0$, $y=0$. В итоге $w=1$ или $w=-1$.
+$\E(Ay)=A\E(y)$, $\Var(Ay)=A\Var(y)A^T$
 \end{solution}
 \protect \hypertarget {soln:26.2}{}
 \begin{solution}{{26.2}}
@@ -1038,26 +1027,27 @@ $\E(Ay)=A\E(y)$, $\Var(Ay)=A\Var(y)A^T$
 \end{solution}
 \protect \hypertarget {soln:26.3}{}
 \begin{solution}{{26.3}}
+
 \end{solution}
 \protect \hypertarget {soln:26.4}{}
 \begin{solution}{{26.4}}
+
 \end{solution}
 \protect \hypertarget {soln:26.5}{}
 \begin{solution}{{26.5}}
-$(5+4+1)=10$; длины — $\sqrt{5}\cdot\sqrt{99}$, $\sqrt{4}\cdot\sqrt{99}$, $\sqrt{1}\cdot\sqrt{99}$; выборочные дисперсии — $5$, $4$, $1$; $(5+4)/10=0.9$.
+
 \end{solution}
 \protect \hypertarget {soln:26.6}{}
 \begin{solution}{{26.6}}
+
 \end{solution}
 \protect \hypertarget {soln:27.1}{}
 \begin{solution}{{27.1}}
-$C_{20}^2\cdot 18$.
+Вычтем $2x^2 + 2y^2 + 2z^2 + 2w^2$. Получим, что оптимальное $x=0$. Далее, $z=0$, $y=0$. В итоге $w=1$ или $w=-1$.
 \end{solution}
 \protect \hypertarget {soln:27.2}{}
 \begin{solution}{{27.2}}
-  $1+x+x^2+x^3+x^4=(1-x^5)/(1-x)$
-  $1+x+x^2+x^3+\ldots = 1/(1-x)$
-  $(1+x)^4$
+
 \end{solution}
 \protect \hypertarget {soln:27.3}{}
 \begin{solution}{{27.3}}
@@ -1067,14 +1057,37 @@ $C_{20}^2\cdot 18$.
 \end{solution}
 \protect \hypertarget {soln:27.5}{}
 \begin{solution}{{27.5}}
-  0 с вероятностью 1/4 и 1 с вероятностью 3/4
+$(5+4+1)=10$; длины — $\sqrt{5}\cdot\sqrt{99}$, $\sqrt{4}\cdot\sqrt{99}$, $\sqrt{1}\cdot\sqrt{99}$; выборочные дисперсии — $5$, $4$, $1$; $(5+4)/10=0.9$.
 \end{solution}
 \protect \hypertarget {soln:27.6}{}
 \begin{solution}{{27.6}}
+\end{solution}
+\protect \hypertarget {soln:28.1}{}
+\begin{solution}{{28.1}}
+$C_{20}^2\cdot 18$.
+\end{solution}
+\protect \hypertarget {soln:28.2}{}
+\begin{solution}{{28.2}}
+  $1+x+x^2+x^3+x^4=(1-x^5)/(1-x)$
+  $1+x+x^2+x^3+\ldots = 1/(1-x)$
+  $(1+x)^4$
+\end{solution}
+\protect \hypertarget {soln:28.3}{}
+\begin{solution}{{28.3}}
+\end{solution}
+\protect \hypertarget {soln:28.4}{}
+\begin{solution}{{28.4}}
+\end{solution}
+\protect \hypertarget {soln:28.5}{}
+\begin{solution}{{28.5}}
+  0 с вероятностью 1/4 и 1 с вероятностью 3/4
+\end{solution}
+\protect \hypertarget {soln:28.6}{}
+\begin{solution}{{28.6}}
   да, сможет!
 \end{solution}
-\protect \hypertarget {soln:27.7}{}
-\begin{solution}{{27.7}}
+\protect \hypertarget {soln:28.7}{}
+\begin{solution}{{28.7}}
 $F_n = F_{n-1} + F_{n-2}$.
 Запишем разложения для $g(x)$, $xg(x)$ и $x^2 g(x)$ друг под другом. Вычитаем. Получаем, что $g(x) = x/(1-x-x^2)$.
 
@@ -1086,36 +1099,36 @@ g(x) = \frac{1}{\sqrt{5}}\left( \frac{a}{x+a} - \frac{b}{x+b}  \right),
 \]
 где $a=(1-\sqrt{5})/2$, $b=(1+\sqrt{5})/2$.
 \end{solution}
-\protect \hypertarget {soln:27.8}{}
-\begin{solution}{{27.8}}
+\protect \hypertarget {soln:28.8}{}
+\begin{solution}{{28.8}}
 Замечаем, что $h_2(t)=h_1(t)\cdot h_1(t)$. После первого шага:
 \[
 h_1(t) = 0.7t + 0.3th^2_1(t)
 \]
 \end{solution}
-\protect \hypertarget {soln:27.9}{}
-\begin{solution}{{27.9}}
+\protect \hypertarget {soln:28.9}{}
+\begin{solution}{{28.9}}
 
-\end{solution}
-\protect \hypertarget {soln:28.1}{}
-\begin{solution}{{28.1}}
-\end{solution}
-\protect \hypertarget {soln:28.2}{}
-\begin{solution}{{28.2}}
 \end{solution}
 \protect \hypertarget {soln:29.1}{}
 \begin{solution}{{29.1}}
-  Если величина $X$ равновероятно принимает $k$ значений, то спутанность равна $k$. У равномерной на $[0;a]$ спутанность равна $a$.
 \end{solution}
 \protect \hypertarget {soln:29.2}{}
 \begin{solution}{{29.2}}
 \end{solution}
-\protect \hypertarget {soln:29.3}{}
-\begin{solution}{{29.3}}
+\protect \hypertarget {soln:30.1}{}
+\begin{solution}{{30.1}}
+  Если величина $X$ равновероятно принимает $k$ значений, то спутанность равна $k$. У равномерной на $[0;a]$ спутанность равна $a$.
 \end{solution}
-\protect \hypertarget {soln:29.4}{}
-\begin{solution}{{29.4}}
+\protect \hypertarget {soln:30.2}{}
+\begin{solution}{{30.2}}
 \end{solution}
-\protect \hypertarget {soln:29.5}{}
-\begin{solution}{{29.5}}
+\protect \hypertarget {soln:30.3}{}
+\begin{solution}{{30.3}}
+\end{solution}
+\protect \hypertarget {soln:30.4}{}
+\begin{solution}{{30.4}}
+\end{solution}
+\protect \hypertarget {soln:30.5}{}
+\begin{solution}{{30.5}}
 \end{solution}
