more bitcoin problem

--- a/all_solutions.tex
+++ b/all_solutions.tex
@@ -376,6 +376,9 @@ $\frac{a}{a+b}$, экспоненциально с параметром $a+b$, $
 \begin{solution}{{9.5}}
   \url{https://people.xiph.org/~greg/attack_success.html}, $\approx 0.017$
 \end{solution}
+\protect \hypertarget {soln:9.6}{}
+\begin{solution}{{9.6}}
+\end{solution}
 \protect \hypertarget {soln:10.1}{}
 \begin{solution}{{10.1}}
 \end{solution}
